--- a/web_app/src/index.html
+++ b/web_app/src/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="myApp">
   <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
+    <script src="external/angular-1.2.15.js"></script>
+    <script src="board/game.js"></script>
     <script src="board/board.js"></script>
   </head>
   <body>
