--- a/web_app/src/index.html
+++ b/web_app/src/index.html
@@ -2,10 +2,19 @@
 <html lang="en" ng-app="myApp">
   <head>
     <script src="external/angular-1.2.15.js"></script>
+    <script src="external/bindonce-0.3.1.js"></script>
     <script src="board/game.js"></script>
     <script src="board/board.js"></script>
+    <script src="board/score.js"></script>
   </head>
   <body>
+    <div style="float:left; padding:0.5in" ng-controller="ScoreController">
+      <p ng-repeat="i in range(Game.numberOfPlayers)">
+        Player #{{i}}: {{Game.scores[i]}}
+      </p>
+    </div>
     <board></board>
+    <div>
+    </div>
   </body>
 </html>
