--- a/chrome_app/index.html
+++ b/chrome_app/index.html
@@ -6,13 +6,14 @@
     <script type="text/javascript">
       function handleMessage(msgEvent) {
         alert('Received:\n' + msgEvent.data);
-        msg = eval('(' + msgEvent.data + ')');
+        msg = JSON.parse(msgEvent.data);
+        console.log(msg);
         updateBoard('board', msg.board);
       }
 
       function postMessage() {
         naclModule = document.getElementById('nacl_module');
-        naclModule.postMessage('hello');
+        naclModule.postMessage('{}');
       }
     </script>
 
@@ -20,7 +21,8 @@
   </head>
   <body>
 
-    <svg id="board" xmlns="http://www.w3.org/2000/svg" version="1.1">
+    <svg id="board" xmlns="http://www.w3.org/2000/svg" version="1.1"
+         viewbox="0 0 100 100">
     </svg>
 
     <script type="text/javascript">
